feat: changed up a bunch of home and gallery

--- a/src/app/components/pages/home/home.component.html
+++ b/src/app/components/pages/home/home.component.html
@@ -1,13 +1,8 @@
 <div class="container mx-auto px-6 py-12">
   <div class="mx-auto">
-    <div class="text-center mb-12">
-      <h1 class="text-4xl font-bold text-gray-100">Ryan Morrissey</h1>
-      <p class="mt-2">Fullstack Software Engineer</p>
-    </div>
-
-    <div class="grid grid-cols-1 md:grid-cols-2 gap-8 items-center">
-      <div class="flex justify-center">
-        <div class="overflow-hidden border-4 border-gray-600">
+    <div class="flex items-center mb-12">
+      <div class="w-1/5 flex justify-center pr-4">
+        <div class="overflow-hidden border-4 border-gray-600 w-48 h-48">
           <img
             src="assets/images/me.jpg"
             alt="My Picture"
@@ -16,23 +11,29 @@
         </div>
       </div>
 
-      <div>
+      <div class="w-4/5">
         <h2 class="text-2xl font-bold text-gray-100 mb-4">Who am I?</h2>
         <p>
-          Hello! I am a software developer living near Albany, New York. I graduated from Rochester Institute of Technology in 2019 and have been working as a full-stack developer since 2020.
-        </p>
-        <h2 class="text-2xl font-bold text-gray-100 mt-6 mb-4">What is this site?</h2>
-        <p class="mb-4">
-          When I started to look for work again, the idea of this site came to mind. I knew the concepts of building something from scratch as well as how to deploy it, but all of my professional work has been on things that had already been established.
-        </p>
-        <p>
-          I find the best way to truly understand how something works is to do it from start to finish.  While visual design is not really a strength of mine, I figure I can still put something together to explain who I am.  I only had a few set goals on how I wanted to deploy it.  Built with an Angular 19 frontend, a Spring backend, and a Postgres database that is all deployed in AWS.
-        </p>
-        <h2 class="text-2xl font-bold text-gray-100 mt-6 mb-4">My goals?</h2>
-        <p>
-          To find a new home to continue my growth as a developer!  I love Software Development from the bottom of my heart and want to get back to it as soon as I can.
+          Hello! My name is Ryan Morrisey, a software developer living near Albany, New York. I graduated from Rochester Institute of Technology in 2019 and have been working as a full-stack developer since 2020.  Following a company-wide layoff, I have been looking for new work as of August 2024.  Moving delayed me a bit, but I am now back to being fully focusing on finding new work.
         </p>
       </div>
+    </div>
+
+    <div class="mb-12">
+      <h2 class="text-2xl font-bold text-gray-100 mb-4">What is this site?</h2>
+      <p class="mb-4">
+        When I started to look for work again, the idea of this site came to mind. I knew the concepts of building something from scratch as well as how to deploy it, but all of my professional work has been on things that had already been established.
+      </p>
+      <p>
+        I find the best way to truly understand how something works is to do it from start to finish. While visual design is not really a strength of mine, I figure I can still put something together to explain who I am. I only had a few set goals on how I wanted to deploy it. Built with an Angular 19 frontend, a Spring backend, and a Postgres database that is all deployed in AWS.
+      </p>
+    </div>
+
+    <div>
+      <h2 class="text-2xl font-bold text-gray-100 mb-4">Why should you hire me?</h2>
+      <p>
+        I like to try new things and I have a passion for getting things done.  I adore software development and the constant improvement one can make in this career is what makes it so enjoyable.  From that enjoyment I build enthusiasm, and that enthusiasm spreads around everyone I work with.
+      </p>
     </div>
   </div>
 </div>
