--- a/src/app/components/pages/resume/resume.component.html
+++ b/src/app/components/pages/resume/resume.component.html
@@ -1,6 +1,6 @@
 <div class="flex w-full h-screen">
   <div class="w-3/5 p-4">
-    <!--I can disable everything at once but cant enable them ):-->
+    <!--I can disable everything at once but cant enable them again so brute force we go ):-->
     <ngx-extended-pdf-viewer
       [src]="'/assets/pdfs/resume.pdf'"
       [height]="'auto'"
@@ -35,7 +35,9 @@
             class="w-10 h-10 mr-4"
           />
           <div>
-            <h3 class="text-lg text-gray-100">StudentUniverse</h3>
+            <h3 class="text-lg text-gray-100">
+              StudentUniverse
+            </h3>
             <p class="mb-4">
               StudentUniverse is a travel company which primarily markets toward active students.  By partnering with different airlines, they are able to offer student-centric discounts and programs.
             </p>
