--- a/src/app/components/pages/hobbies/hobbies.component.html
+++ b/src/app/components/pages/hobbies/hobbies.component.html
@@ -8,7 +8,7 @@
       I then started to look into 3D printers as a way to get cheaper models, but from there discovered resin statues and larger builds.  3D printing props, statues, and terrain became more fun than collecting models.  I could work on different techniques and create some unique gifts for friends and family.
     </p>
     <p>
-      I just moved so my painting setup is still packed so here are some pictures from my phone that I've taken over the past 4ish years.  I compressed the images and added some pagination.  I think having a kind of loading animation would be nice?  I'll look into it.
+      I just moved so my painting setup is still packed so here are some pictures from my phone that I've taken over the past 4ish years.  I compressed the images and added some pagination, as well as staggered out loads so it shouldn't be too laggy.  First draft of this page was a bit brutal.
     </p>
   </div>
 
