--- a/src/app/components/shared/image-gallery/image-gallery.component.html
+++ b/src/app/components/shared/image-gallery/image-gallery.component.html
@@ -1,7 +1,7 @@
 <div class="grid grid-cols-[repeat(auto-fill,_200px)] justify-center gap-4 p-4">
   <div
     *ngFor="let imageUrl of loadedImages"
-    class="w-[200px] h-[200px] cursor-pointer transform transition-transform duration-200 ease-in-out hover:scale-105"
+    class="w-[200px] h-[200px] transform transition-transform duration-200 ease-in-out hover:scale-105 fade-in"
     (click)="openImage(imageUrl)"
   >
     <img
@@ -10,9 +10,10 @@
       class="w-full h-full object-cover rounded"
     />
   </div>
+
   <div
-    *ngIf="!loadMoreDisabled"
-    class="w-[200px] h-[200px] flex items-center justify-center cursor-pointer transform transition-transform duration-200 ease-in-out hover:scale-105 bg-gray-800 rounded"
+    *ngIf="showLoadMore"
+    class="w-[200px] h-[200px] flex items-center justify-center transform transition-transform duration-200 ease-in-out hover:scale-105 bg-gray-800 rounded"
     (click)="loadMore()"
   >
     <span class="text-center font-semibold">Load More</span>
@@ -26,12 +27,13 @@
 >
   <div
     class="relative bg-white rounded shadow-lg max-w-full max-h-full"
-    (click)="closeImage()"
+    (click)="$event.stopPropagation()"
   >
     <button
-      class="absolute top-2 right-2 text-black bg-gray-200 rounded p-2 hover:bg-gray-300"
-      (click)="closeImage()">
-    ✕
+      class="absolute top-2 right-2 text-white rounded p-2"
+      (click)="closeImage()"
+    >
+      ✕
     </button>
     <img
       [src]="selectedImage"
@@ -40,4 +42,3 @@
     />
   </div>
 </div>
-
