--- a/src/app/components/shared/nav-bar/nav-bar.component.html
+++ b/src/app/components/shared/nav-bar/nav-bar.component.html
@@ -9,7 +9,7 @@
         <li *ngFor="let option of options">
           <a href="{{option}}"
              [ngClass]="option === currentUrl ? 'md:dark:text-yellow-400' : 'md:dark:text-gray-300'"
-             class="block py-2 px-3 bg-blue-700 rounded md:bg-transparent md:text-blue-700 md:p-0 dark:text-white hover:underline first-letter:capitalize"
+             class="block py-2 px-3 rounded md:bg-transparent md:text-blue-700 md:p-0 dark:text-white hover:underline first-letter:capitalize"
              aria-current="page">
             {{option}}
           </a>
