--- a/src/app/components/shared/nav-bar/nav-bar.component.html
+++ b/src/app/components/shared/nav-bar/nav-bar.component.html
@@ -1,3 +1,4 @@
+<!--This should have a hamburger menu but it's not mobile friendly anyway so-->
 <nav class="bg-white border-gray-200 dark:bg-gray-900">
   <div class="max-w-screen-xl flex flex-wrap items-center justify-between mx-auto p-4">
     <a href="#" class="flex items-center space-x-3 rtl:space-x-reverse">
