--- a/src/app/components/pages/resume/resume.component.html
+++ b/src/app/components/pages/resume/resume.component.html
@@ -1,5 +1,5 @@
-<div class="flex w-full h-screen">
-  <div class="w-3/5 p-4">
+<div class="flex flex-col md:flex-row w-full h-screen">
+  <div class="w-full md:w-3/5 p-4">
     <!--I can disable everything at once but cant enable them again so brute force we go ):-->
     <ngx-extended-pdf-viewer
       [src]="'/assets/pdfs/resume.pdf'"
@@ -24,7 +24,7 @@
     </ngx-extended-pdf-viewer>
   </div>
 
-  <div class="w-2/5 p-4">
+  <div class="w-full md:w-2/5 p-4">
     <div>
       <h2 class="text-2xl font-bold text-gray-100 mb-4">Work Experience</h2>
       <ul class="space-y-6">
@@ -35,9 +35,7 @@
             class="w-10 h-10 mr-4"
           />
           <div>
-            <h3 class="text-lg text-gray-100">
-              StudentUniverse
-            </h3>
+            <h3 class="text-lg text-gray-100">StudentUniverse</h3>
             <p class="mb-4">
               StudentUniverse is a travel company which primarily markets toward active students.  By partnering with different airlines, they are able to offer student-centric discounts and programs.
             </p>
