feat: some text changes

--- a/src/app/components/pages/front-end/front-end.component.html
+++ b/src/app/components/pages/front-end/front-end.component.html
@@ -18,7 +18,7 @@
   <div class="mb-12">
     <h2 class="text-3xl font-bold text-gray-100 mb-4 mt-4">History with Frontend Development</h2>
     <p class="leading-relaxed mb-4">
-      My first real experience with frontend development was not until my co-op.  Being a computer science major, my education was more focused on algorithms and foundations rather than visual designs.  My enjoyment with frontend work really stems from work with javascript and typescript.  I love connecting things together to create something functional, with emphasis on being easy to maintain and port.
+      My first real experience with frontend development was not until my co-op.  Being a computer science major, my education was more focused on algorithms and foundations rather than visual designs.  My enjoyment with frontend work really stems from work with javascript and typescript.  I love connecting things together to create something functional, with emphasis on being easy to maintain and reuse.
     </p>
     <p class="leading-relaxed">
       I would say CSS is not really a strength of mine (just yet, working on it), so I am mostly using Tailwind to keep things consistent.  I am not using any templates or anything to base this site off of though, it's mostly for me to work on deployment skills and to generate a conversation piece.
@@ -32,7 +32,7 @@
 
     </p>
     <p>
-      <span class="text-gray-100">PostgreSQL:</span>  My crutch, but at the same time, I see more and more development using it so I don’t feel <span class="font-bold">that</span> bad about it.  I also didn’t mess around with animations because I just want to keep things simple.
+      <span class="text-gray-100">Tailwind:</span>  My crutch, but at the same time, I see more and more development using it so I don’t feel <span class="font-bold">that</span> bad about it.  I personally find it easier to read as I need to bounce less between HTML and CSS/LESS.
     </p>
   </div>
 
