--- a/src/app/components/pages/resume/resume.component.html
+++ b/src/app/components/pages/resume/resume.component.html
@@ -75,7 +75,7 @@
               Abiomed is a med-tech company that focuses on heart recovery technology.  In particular, I was a member of the cloud team which developed support software for their heart pumps.  With our site, medical professionals could have constant access to the status of any Abiomed devices associated with them.
             </p>
             <p>
-              As my first experience with professional work as a part of my college's co-op program, my year with Abiomed was more of a support role.  Working with Angular and .net core, I mostly assisted with bug fixes and QA testing.
+              As my first experience with professional work as a part of my college's co-op program, my year with Abiomed was more of a support role.  Working with Angular and .NET Core, I mostly assisted with bug fixes and QA testing.
             </p>
           </div>
         </li>
