--- a/src/app/components/shared/http-tester/http-tester.component.html
+++ b/src/app/components/shared/http-tester/http-tester.component.html
@@ -4,7 +4,7 @@
       <div class="pb-6">This started out as a quick thing to test my connection with my spring backend.  Basically I am generating a uuid and storing it as a cookie to act as a unique key, so its all one table but with personal ids associated with each cookie.</div>
       <div class="pb-6">Originally it didn't use cookies and just let everyone have access and whoops welp didn't really think that one through.  You can't update IDs you don't know the cookie for so don't try.  I'll know.</div>
       <div class="pb-6">If it doesn't connect, sorry.  For some reason my EC2 linux instance shuts off at night and it's also extremely expensive comparatively to the client deployment.  One postgres DB with one table, EC2 instance and a load balancer costs $1-2 a day which is just crazy, so I might shut it off.  I have the experience of setting it up now at least so im happy with that but i'll try to keep it up as much as I can.  Please check out the server code if you are interested.</div>
-      <div>Edit - Time of death: 3:24:19 PM EST.  EC2 shot up to $4 a day yesterday which feels insane for such a small server.  I built some deployment experience so I don't feel too bad about shutting it off.  I will keep developing the server for exercises, but won't be deploying it.</div>
+      <div>Edit - Time of death: January 5th, 3:24:19 PM EST.  EC2 shot up to $4 a day yesterday which feels insane for such a small server.  I built some deployment experience so I don't feel too bad about shutting it off.  I will keep developing the server for exercises, but won't be deploying it.</div>
     </div>
 
     <div class="max-w-lg mx-auto p-4 text-white">HTTP Tester Cookie - {{tastyCookie}}</div>
