--- a/src/app/components/pages/home/home.component.html
+++ b/src/app/components/pages/home/home.component.html
@@ -35,7 +35,7 @@
         When I started to look for work again, the idea of this site came to mind. I knew the concepts of building something from scratch as well as how to deploy it, but all of my professional work has been on things that had already been established.  Applications always have a space for a website, so why not fill it out.
       </p>
       <p>
-        I find the best way to truly understand how something works is to practice it from start to finish. While visual design is not really a strength of mine, I figure I can still put something together to explain who I am. I only had a few set goals on how I wanted to deploy it. Built with an Angular 19 frontend, a Spring backend, and a Postgres database that is all deployed in AWS.
+        I find the best way to truly understand how something works is to practice it from start to finish. While visual design is not really a strength of mine, I figure I can still put something together to explain who I am. I only had a few set goals on how I wanted to deploy it. Built with an Angular 19 frontend, a Spring backend, and a PostgreSQL database that is all deployed in AWS.
       </p>
     </div>
 
